// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#E9FAD2",
          "green200": "#CFF6A6",
          "green300": "#A7E675",
          "green400": "#7FCD50",
          "green500": "#4CAD20",
          "green600": "#369417",
          "green700": "#237c10",
          "green900": "#095306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <CheckboxGroup
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        options={
          [
            {
              "label": "Lorem ipsum",
              "value": "lorem",
            },
            {
              "label": "Lorem ipsum 2",
              "value": "lorem2",
            },
            {
              "label": "Lorem ipsum 3",
              "value": "lorem3",
            },
          ]
        }
        overrides={{}}
        value={{}}
      >
        <div
          className="HoiPoi__CheckboxGroup__root-1-0 HoiPoi__CheckboxGroup__horizontal-1-14"
        >
          <Label
            className="HoiPoi__CheckboxGroup__Label-1-1"
            overrides={{}}
          >
            <div
              className="HoiPoi__Label__root-1-15 HoiPoi__CheckboxGroup__Label-1-1"
            >
              <ForwardRef
                as="span"
                className="HoiPoi__Label__Text-1-16"
                isTruncated={false}
                overrides={{}}
                type="body"
              >
                <span
                  className="HoiPoi__Text__root-1-19 HoiPoi__Label__Text-1-16 HoiPoi__Text__body-1-29"
                  style={{}}
                >
                  Lorem ipsum
                </span>
              </ForwardRef>
            </div>
          </Label>
          <div
            className="HoiPoi__CheckboxGroup__formControl-1-4"
          >
            <CheckboxControl
              isReadOnly={false}
              key="lorem"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum",
                  "value": "lorem",
                }
              }
              overrides={{}}
              value={false}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-1-45"
                key="lorem"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-1-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={false}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-1-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#7d8a96"
                        name="checkBoxOutlineBlank"
                        size="medium"
                      >
                        <ForwardRef
                          color="#7d8a96"
                          name="checkBoxOutlineBlank"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-1-57 HoiPoi__Icon__medium-1-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBoxOutlineBlank
                              color="#7d8a96"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 2v14H2V2h14zm0-2H2C.9 0 0 .9 0 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBoxOutlineBlank>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked=""
                        className="HoiPoi__Checkbox__input-1-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="unchecked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-1-47"
                  >
                    Lorem ipsum
                  </span>
                </div>
              </div>
            </CheckboxControl>
            <CheckboxControl
              isReadOnly={false}
              key="lorem2"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum 2",
                  "value": "lorem2",
                }
              }
              overrides={{}}
              value={false}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-1-45"
                key="lorem2"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-1-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={false}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-1-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#7d8a96"
                        name="checkBoxOutlineBlank"
                        size="medium"
                      >
                        <ForwardRef
                          color="#7d8a96"
                          name="checkBoxOutlineBlank"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-1-57 HoiPoi__Icon__medium-1-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBoxOutlineBlank
                              color="#7d8a96"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 2v14H2V2h14zm0-2H2C.9 0 0 .9 0 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBoxOutlineBlank>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked=""
                        className="HoiPoi__Checkbox__input-1-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="unchecked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-1-47"
                  >
                    Lorem ipsum 2
                  </span>
                </div>
              </div>
            </CheckboxControl>
            <CheckboxControl
              isReadOnly={false}
              key="lorem3"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum 3",
                  "value": "lorem3",
                }
              }
              overrides={{}}
              value={false}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-1-45"
                key="lorem3"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-1-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={false}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-1-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#7d8a96"
                        name="checkBoxOutlineBlank"
                        size="medium"
                      >
                        <ForwardRef
                          color="#7d8a96"
                          name="checkBoxOutlineBlank"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-1-57 HoiPoi__Icon__medium-1-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBoxOutlineBlank
                              color="#7d8a96"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 2v14H2V2h14zm0-2H2C.9 0 0 .9 0 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBoxOutlineBlank>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked=""
                        className="HoiPoi__Checkbox__input-1-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="unchecked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-1-47"
                  >
                    Lorem ipsum 3
                  </span>
                </div>
              </div>
            </CheckboxControl>
          </div>
        </div>
      </CheckboxGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`CheckboxGroup with values match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#E9FAD2",
          "green200": "#CFF6A6",
          "green300": "#A7E675",
          "green400": "#7FCD50",
          "green500": "#4CAD20",
          "green600": "#369417",
          "green700": "#237c10",
          "green900": "#095306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <CheckboxGroup
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        onChange={[Function]}
        options={
          [
            {
              "label": "Lorem ipsum",
              "value": "lorem",
            },
            {
              "label": "Lorem ipsum 2",
              "value": "lorem2",
            },
            {
              "label": "Lorem ipsum 3",
              "value": "lorem3",
            },
          ]
        }
        overrides={{}}
        value={
          {
            "lorem": true,
            "lorem3": true,
          }
        }
      >
        <div
          className="HoiPoi__CheckboxGroup__root-2-0 HoiPoi__CheckboxGroup__horizontal-2-14"
        >
          <Label
            className="HoiPoi__CheckboxGroup__Label-2-1"
            overrides={{}}
          >
            <div
              className="HoiPoi__Label__root-2-15 HoiPoi__CheckboxGroup__Label-2-1"
            >
              <ForwardRef
                as="span"
                className="HoiPoi__Label__Text-2-16"
                isTruncated={false}
                overrides={{}}
                type="body"
              >
                <span
                  className="HoiPoi__Text__root-2-19 HoiPoi__Label__Text-2-16 HoiPoi__Text__body-2-29"
                  style={{}}
                >
                  Lorem ipsum
                </span>
              </ForwardRef>
            </div>
          </Label>
          <div
            className="HoiPoi__CheckboxGroup__formControl-2-4"
          >
            <CheckboxControl
              isReadOnly={false}
              key="lorem"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum",
                  "value": "lorem",
                }
              }
              overrides={{}}
              value={true}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-2-45"
                key="lorem"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-2-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={true}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-2-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#d4d8dc"
                        name="checkBox"
                        size="medium"
                      >
                        <ForwardRef
                          color="#d4d8dc"
                          name="checkBox"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-2-57 HoiPoi__Icon__medium-2-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBox
                              color="#d4d8dc"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 0H2a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V2a2 2 0 00-2-2zM7 14L2 9l1.41-1.41L7 11.17l7.59-7.59L16 5l-9 9z"
                                  fill="#d4d8dc"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBox>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked="checked"
                        className="HoiPoi__Checkbox__input-2-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="checked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-2-47"
                  >
                    Lorem ipsum
                  </span>
                </div>
              </div>
            </CheckboxControl>
            <CheckboxControl
              isReadOnly={false}
              key="lorem2"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum 2",
                  "value": "lorem2",
                }
              }
              overrides={{}}
              value={false}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-2-45"
                key="lorem2"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-2-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={false}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-2-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#7d8a96"
                        name="checkBoxOutlineBlank"
                        size="medium"
                      >
                        <ForwardRef
                          color="#7d8a96"
                          name="checkBoxOutlineBlank"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-2-57 HoiPoi__Icon__medium-2-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBoxOutlineBlank
                              color="#7d8a96"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 2v14H2V2h14zm0-2H2C.9 0 0 .9 0 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
                                  fill="#7d8a96"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBoxOutlineBlank>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked=""
                        className="HoiPoi__Checkbox__input-2-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="unchecked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-2-47"
                  >
                    Lorem ipsum 2
                  </span>
                </div>
              </div>
            </CheckboxControl>
            <CheckboxControl
              isReadOnly={false}
              key="lorem3"
              onChange={[Function]}
              option={
                {
                  "label": "Lorem ipsum 3",
                  "value": "lorem3",
                }
              }
              overrides={{}}
              value={true}
            >
              <div
                className="HoiPoi__CheckboxControl__checkboxWrapper-2-45"
                key="lorem3"
              >
                <div
                  className="HoiPoi__CheckboxControl__checkboxControl-2-46"
                  onClick={[Function]}
                >
                  <Checkbox
                    checked={true}
                    color="neutral"
                    isDisabled={false}
                    onChange={[Function]}
                    overrides={{}}
                    size="medium"
                  >
                    <div
                      className="HoiPoi__Checkbox__root-2-54"
                      onClick={[Function]}
                    >
                      <Component
                        color="#d4d8dc"
                        name="checkBox"
                        size="medium"
                      >
                        <ForwardRef
                          color="#d4d8dc"
                          name="checkBox"
                          overrides={{}}
                          size="medium"
                        >
                          <span
                            className="HoiPoi__Icon__root-2-57 HoiPoi__Icon__medium-2-59"
                            onMouseDown={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onMouseUp={[Function]}
                          >
                            <CheckBox
                              color="#d4d8dc"
                            >
                              <svg
                                fill="none"
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M16 0H2a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V2a2 2 0 00-2-2zM7 14L2 9l1.41-1.41L7 11.17l7.59-7.59L16 5l-9 9z"
                                  fill="#d4d8dc"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </CheckBox>
                          </span>
                        </ForwardRef>
                      </Component>
                      <input
                        checked="checked"
                        className="HoiPoi__Checkbox__input-2-55"
                        disabled=""
                        onChange={[Function]}
                        type="checkbox"
                        value="checked"
                      />
                    </div>
                  </Checkbox>
                  <span
                    className="HoiPoi__CheckboxControl__checkboxLabel-2-47"
                  >
                    Lorem ipsum 3
                  </span>
                </div>
              </div>
            </CheckboxControl>
          </div>
        </div>
      </CheckboxGroup>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
